Automated code cleanup